Refactor CLI, setup preliminary tests
Refactor the CLI frontend into a Click command group of related commands
Set up preliminary tests for the cli. No value assertions yet, but this adds tests for common scenarios in preparation for writing test assertions

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = BlueCat_Address_Manager
+name = BlueCat-Address-Manager
 description = BlueCat_Address_Manager is a python interface to the BlueCat Address Manager software (https://www.bluecatnetworks.com/platform/management/bluecat-address-manager/). It offers both an API and a CLI to simplify management of resources in a BlueCat AM installation
 author = Russell Sutherland
 author-email = russell.sutherland@utoronto.ca
@@ -72,7 +72,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov bluecat_am --cov-report term-missing
+    #--cov bluecat_am --cov-report term-missing
     --verbose
 norecursedirs =
     dist
